# LedControl

./: CMakeLists.txt  README  README.md  example.conf
BadLib/: CMakeLists.txt  README.md
BadLib/sources/: SetState.cpp
CommandGetColor/: CMakeLists.txt
CommandGetColor/sources/: GetColor.cpp  GetColor.h
CommandGetRate/: CMakeLists.txt
CommandGetRate/sources/: GetRate.cpp  GetRate.h
CommandGetState/: CMakeLists.txt
CommandGetState/sources/: GetState.cpp  GetState.h
CommandSetColor/: CMakeLists.txt
CommandSetColor/sources/: SetColor.cpp  SetColor.h
CommandSetRate/: CMakeLists.txt
CommandSetRate/sources/: SetRate.cpp  SetRate.h
CommandSetState/: CMakeLists.txt
CommandSetState/sources/: SetState.cpp  SetState.h
scripts/: get-led-state.sh  led_control_client.sh  set-led-state.sh
sources/: Command.h  CommandFactory.cpp  CommandFactory.h  Defines.h  Driver.cpp  Driver.h  Exception.h  LastDataCommand.h  LedControl.cpp  Logger.cpp  Logger.h  MessageHandler.cpp  MessageHandler.h  MessageQueue.cpp  MessageQueue.h  Server.cpp  Server.h  UnknownCommand.h
tests/: CommandFactoryTest.h  ExceptionTest.h  LoggerTest.h  MessageHandlerTest.h  ServerTest.h  tests.cpp
tests_support/: test1.conf  test2.conf  test3.conf  test4.conf
